--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,60 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
+
+#ignore thumbnails created by windows
+Thumbs.db
+#Ignore files built by Visual Studio
+*.obj
+*.exe
+*.pdb
+*.user
+*.aps
+*.cache
+*.pch
+*.vspscc
+*.vssscc
+*.vsscc
+*.scc
+*_i.c
+*_p.c
+*.ncb
+*.suo
+*.tlb
+*.tlh
+*.bak
+*.cache
+*.ilk
+*.log
+*.*log*
+*~
+*.swp
+*.userprefs
+*.pidb
+[Bb]in
+[Dd]ebug*/
+*.lib
+*.sbr
+obj/
+[Rr]elease*/
+_ReSharper*/
+*.resharper.user
+*.resharper
+[Tt]est[Rr]esult*
+*.log*
+*.BASE*
+*.LOCAL*
+*.REMOTE*
+*.orig
+*.BACKUP.*
+~$*.*
+deploy
+*.wave*
+test-results
+Build
+UpgradeLog*.xml
+_sgbak/
+*.zip
+Backup/
+_UpgradeReport_Files/
+*@*;*.cs*
